force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <description>To store customer feedback(survey) records coming from qualtrics system</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF-{000000}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>