force-app/main/default/objects/Customer_Feedback__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Personal Information</complianceGroup>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>lookup relationship between Account and Customer Feedback object</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Feedback</relationshipLabel>
    <relationshipName>Customer_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>