force-app/main/default/objects/Customer_Feedback__c/fields/Actual_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Actual_Outcome__c</fullName>
    <description>What the actual result is.</description>
    <label>Actual Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>