force-app/main/default/objects/Customer_Feedback__c/fields/Advocacy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Advocacy_Rating__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Non Personal Information</complianceGroup>
    <description>Numerical score from 0 - 10 (inclusive) - presented as a whole number</description>
    <label>Advocacy Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>