force-app/main/default/objects/Customer_Feedback__c/fields/Coach_Name__c.field-meta.xml
<CustomField>
    <fullName>Coach_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy - Personal Information</complianceGroup>
    <description>The name of Coach who interacted with the customer during chat interaction</description>
    <label>Coach Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>