force-app/main/default/objects/Customer_Feedback__c/fields/Coach_Type__c.field-meta.xml
<CustomField>
    <fullName>Coach_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>To store coach type (ie contact centre, join coach, home loan coach etc) in feedback detail</description>
    <label>Coach Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>