force-app/main/default/objects/Customer_Feedback__c/fields/Date_Bug_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Bug_Resolved__c</fullName>
    <description>The date for when the bug is resolved.</description>
    <label>Date Bug Resolved</label>
    <type>Date</type>
</CustomField>