force-app/main/default/objects/Customer_Feedback__c/fields/Date_Time_Bug_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Bug_Occurred__c</fullName>
    <description>Date and time for the bug occured.</description>
    <label>Date/Time Bug Occurred</label>
    <type>DateTime</type>
</CustomField>