force-app/main/default/objects/Customer_Feedback__c/fields/Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Expected_Outcome__c</fullName>
    <description>What the expected result is.</description>
    <label>Expected Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>