force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Received_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Received_Date_Time__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information</complianceGroup>
    <description>Customer feedback received date time</description>
    <label>Feedback Received Date/Time</label>
    <type>DateTime</type>
</CustomField>