force-app/main/default/objects/Customer_Feedback__c/fields/Feedback_Type__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Type__c</fullName>
    <description>Feedback type or description to identify which trigger the individual piece of feedback relates to.</description>
    <label>Feedback Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joined ANZx</fullName>
            </value>
            <value>
                <fullName>60% through a savings goal</fullName>
            </value>
            <value>
                <fullName>Changes profile</fullName>
            </value>
            <value>
                <fullName>Made payments</fullName>
            </value>
            <value>
                <fullName>Opened an account</fullName>
            </value>
            <value>
                <fullName>Rate &amp; Review</fullName>
            </value>
            <value>
                <fullName>Coach Interaction</fullName>
            </value>
            <value>
                <fullName>Store Visit</fullName>
            </value>
            <value>
                <fullName>Complaint or dispute</fullName>
            </value>
            <value>
                <fullName>Settlement Loan</fullName>
            </value>
            <value>
                <fullName>Guarantee Exited ANZx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>