force-app/main/default/objects/Customer_Feedback__c/fields/Jira_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket__c</fullName>
    <description>URL Field to the related Jira Ticket.</description>
    <label>Jira Ticket</label>
    <type>Url</type>
</CustomField>