force-app/main/default/objects/Customer_Feedback__c/fields/Mobile_Device_Details__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Device_Details__c</fullName>
    <description>What the Mobile devices details are.</description>
    <label>Mobile Device Details</label>
    <type>TextArea</type>
</CustomField>