force-app/main/default/objects/Customer_Feedback__c/fields/Number_of_Related_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Cases__c</fullName>
    <label>Number of Related Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>