force-app/main/default/objects/Customer_Feedback__c/fields/OCV_ID__c.field-meta.xml
<CustomField>
    <fullName>OCV_ID__c</fullName>
    <complianceGroup>Integrity_Accurate</complianceGroup>
    <description>Backend field to store OCV ID received from Qualtrics. This field will be used in trigger to identify the matching Account Id.</description>
    <label>OCV ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>