force-app/main/default/objects/Customer_Feedback__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy - Non Personal Information</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link the feedback with related case record</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Feedback</relationshipLabel>
    <relationshipName>Customer_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>