force-app/main/default/objects/Customer_Feedback__c/fields/Responsible_Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Value_Stream__c</fullName>
    <description>A list of the responsible value stream for the bug reported.</description>
    <label>Responsible Value Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Help</fullName>
            </value>
            <value>
                <fullName>Manage_My_Money</fullName>
                <label>Manage My Money</label>
            </value>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>CPP</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Learn and Adopt</fullName>
            </value>
            <value>
                <fullName>M.A.C</fullName>
            </value>
            <value>
                <fullName>Data Enablement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>