force-app/main/default/objects/Customer_Feedback__c/fields/Steps_Taken_Prior_to_Hitting_Bug__c.field-meta.xml
<CustomField>
    <fullName>Steps_Taken_Prior_to_Hitting_Bug__c</fullName>
    <description>The course of steps taken before hitting bug.</description>
    <label>Steps Taken Prior to Hitting Bug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>