force-app/main/default/objects/Customer_Feedback__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <description>Field for store location if the feedback is related to particular store</description>
    <label>Store Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>