force-app/main/default/objects/Customer_Feedback__c/fields/Verbatim__c.field-meta.xml
<CustomField>
    <fullName>Verbatim__c</fullName>
    <complianceGroup>Integrity_Trusted</complianceGroup>
    <description>Unstructured text, no maximum limit</description>
    <label>Verbatim</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>