force-app/main/default/objects/Customer_Feedback__c/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <description>A record type to view the feedback.</description>
    <label>Feedback</label>
</RecordType>