force-app/main/default/objects/Customer_Feedback__c/recordTypes/Reported_Bugs.recordType-meta.xml
<RecordType>
    <fullName>Reported_Bugs</fullName>
    <active>true</active>
    <description>A section to view the reported bugs.</description>
    <label>Reported Bugs</label>
</RecordType>