force-app/main/default/objects/Customer_Feedback__c/listViews/All_Feedback.listView-meta.xml
<ListView>
    <fullName>All_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Feedback_Type__c</columns>
    <columns>Verbatim__c</columns>
    <columns>Advocacy_Rating__c</columns>
    <columns>Feedback_Received_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Feedback</label>
</ListView>